2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.addin.xml: Bump MD version.

2007-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Added missing
	  length check. Fixes bug #325675.

2007-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: CursorPosition property
	  not available in gtk# 2.8.

2007-09-17  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: It's now possible to set
	  the caret positon in the code completion data (using the | char in the
	  data text). Required for bug 325438.

2007-09-14  Jeffrey Stedfast  <fejj@novell.com>

	Fixes bug #82865

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs (OnMoveCursor):
	Move the cursor, /then/ call
	ITextEditorExtension.CursorPositionChanged().
	(OnButtonPressEvent): Same.

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs
	(GetLineTextAtOffset): If the cursor is at the end of a line,
	don't advance thru the next line (this returning 2 lines of text
	rather than the 1).

2007-09-13  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs: changed libglib
	  reference.

2007-09-13  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs: Removed
	  MonoDevelop.SourceEditor.dll.config - changed DllImports.

2007-09-11  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Add
	  a null check to defend against unexpected parser output.

	* MonoDevelop.SourceEditor.mdp: Commit a minor automatic
	  formatting change.

2007-09-04  Michael Hutchinson <MHutchinson@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs,
	  MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs,
	  MonoDevelop.SourceEditor.Gui.OptionPanels/BehaviorTextEditorPanel.cs,